# trustable-ai

./: .gitignore  CLAUDE.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENTS_V0.2.1_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  README.md  TEST_SUMMARY.md  VISION.md  WORKFLOW_SUITE_COMPLETE.md  coverage.xml  estimates.json  pyproject.toml  pytest.ini  setup.py  test_registry.py
.claude/: .gitignore  CLAUDE.md  README.md  config.yaml  context-index.yaml  settings.local.json
.claude/acceptance-tests/: epic-1031-test-plan.md  epic-1079-test-plan.md
.claude/agents/: architect.md  business-analyst.md  code-reviewer.md  devops-engineer.md  documentation-specialist.md  engineer.md  performance-engineer.md  project-architect.md  qa-engineer.md  qa-tester.md  release-manager.md  scrum-master.md  security-specialist.md  senior-engineer.md  technical-writer.md  tester.md  ux-designer.md
.claude/commands/: agent-spawn-example.md  architecture-planning.md  backlog-grooming.md  business-analyst.md  code-reviewer.md  context-generation.md  daily-standup.md  dependency-management.md  devops-engineer.md  documentation-specialist.md  epic-breakdown.md  (+20 more)
agents/: CLAUDE.md  __init__.py  registry.py
cli/: CLAUDE.md  __init__.py  main.py
config/: CLAUDE.md  __init__.py  loader.py  schema.py
core/: CLAUDE.md  __init__.py  optimized_loader.py  profiler.py  state_manager.py
docs/: CLAUDE.md  QUICKSTART.md
examples/: README.md
skills/: CLAUDE.md  __init__.py
tests/: CLAUDE.md  __init__.py  conftest.py
workflows/: CLAUDE.md  __init__.py  registry.py
(+148 files in other folders)
